--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^1.1.3",
+    "iconoir-react": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2"
   },
